--- a/.github/workflows/deployToS3.yaml
+++ b/.github/workflows/deployToS3.yaml
@@ -33,8 +33,8 @@ jobs:
         run: |
           npm run build
 
-      # Set up AWS CLI
-      - name: Set up AWS CLI
+      # Set environment-specific AWS credentials
+      - name: Set up AWS CLI for dev or prod
         id: aws_credentials
         with:
           if [ "${{ github.ref }}" == "refs/heads/main" ]; then
@@ -48,6 +48,14 @@ jobs:
             echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY_DEV }}" >> $GITHUB_ENV
             echo "AWS_REGION=${{ secrets.AWS_REGION_DEV }}" >> $GITHUB_ENV
           fi
+
+      # Setup AWS CLI with the environment variables
+      - name: Configure AWS CLI
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ env.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ env.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
 
       # Deploy to AWS (dev or prod)
       - name: Deploy to AWS
