--- a/.github/workflows/deployToS3.yaml
+++ b/.github/workflows/deployToS3.yaml
@@ -9,11 +9,11 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu:latest
+    runs-on: ubuntu-latest
     environment: ${{ github.ref == 'refs/heads/main' && 'prod' || 'dev' }}
 
     steps:
-      # checkout@v3 is an action to check out the code from the repository
+      # Checkout the code
       - name: Checkout code
         uses: actions/checkout@v3
 
@@ -35,8 +35,7 @@ jobs:
 
       # Set environment-specific AWS credentials
       - name: Set up AWS CLI for dev or prod
-        id: aws_credentials
-        with:
+        run: |
           if [ "${{ github.ref }}" == "refs/heads/main" ]; then
             echo "Using production environment"
             echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID_PROD }}" >> $GITHUB_ENV
