--- a/.github/workflows/deploy_frontend_dev.yaml
+++ b/.github/workflows/deploy_frontend_dev.yaml
@@ -40,6 +40,10 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-2
 
+      - name: Check AWS Credentials
+        run: |
+          aws sts get-caller-identity --debug
+
       # Deploy to AWS (dev or prod)
       - name: Deploy to AWS
         run: aws s3 sync out/ s3://lkpc-hosting-dev --delete
