--- a/.github/workflows/deploy_frontend_dev.yaml
+++ b/.github/workflows/deploy_frontend_dev.yaml
@@ -32,18 +32,21 @@ jobs:
         run: |
           npm run build
 
-      # Setup AWS CLI with the environment variables
-      - name: Configure AWS CLI
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-2
+#      # Setup AWS CLI with the environment variables
+#      - name: Configure AWS CLI
+#        uses: aws-actions/configure-aws-credentials@v4
+#        with:
+#          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#          aws-region: us-east-2
 
-      - name: Check AWS Credentials
-        run: |
-          aws sts get-caller-identity --debug
+#      - name: Check AWS Credentials
+#        run: |
+#          aws sts get-caller-identity --debug
 
       # Deploy to AWS (dev or prod)
       - name: Deploy to AWS
-        run: aws s3 sync out/ s3://lkpc-hosting-dev --delete
+        run: |
+          aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws s3 sync out/ s3://lkpc-hosting-dev --delete
