--- a/.github/workflows/deploy_frontend_dev.yaml
+++ b/.github/workflows/deploy_frontend_dev.yaml
@@ -32,8 +32,11 @@ jobs:
         run: |
           npm run build
 
-      - name: Deploy to AWS
-        run: |
-          aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws s3 sync out/ s3://lkpc-hosting-dev --delete
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          role-to-assume: arn:aws:iam::YOUR_AWS_ACCOUNT_ID:role/GitHubActionsRole
+          aws-region: us-east-2
+
+      - name: Deploy to S3
+        run: aws s3 sync out/ s3://lkpc-hosting-dev  --delete
