--- a/.github/workflows/deploy_frontend_dev.yaml
+++ b/.github/workflows/deploy_frontend_dev.yaml
@@ -35,7 +35,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          role-to-assume: arn:aws:iam::774305616028:role/GitHubActionsRole
+          role-to-assume: arn:aws:iam::774305616028:role/GithubActionRole
           aws-region: us-east-2
 
       - name: Deploy to S3
