--- a/.github/workflows/deploy_frontend_dev.yaml
+++ b/.github/workflows/deploy_frontend_dev.yaml
@@ -5,16 +5,16 @@ on:
   push:
     branches:
       - "*"
+    env:
+      BUCKET_NAME: "lkpc-hosting-dev"
+      AWS_REGION: "us-east-2"
 
 jobs:
-  deploy:
+  S3PackageUpload:
     runs-on: ubuntu-latest
-    environment: dev
-
     steps:
-      # Checkout the code
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - name: Git clone the repository
+        uses: actions/checkout@v4
 
       # Set up Node.js environment
       - name: Set up Node.js
@@ -33,10 +33,11 @@ jobs:
           npm run build
 
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: arn:aws:iam::774305616028:role/GithubActionRole
-          aws-region: us-east-2
+          role-session-name: GithubToS3
+          aws-region: ${{ env.AWS_REGION }}
 
       - name: Deploy to S3
-        run: aws s3 sync out/ s3://lkpc-hosting-dev  --delete
+        run: aws s3 sync out/ s3://${{ env.BUCKET_NAME }} --delete
