--- a/.github/workflows/deploy_frontend_dev.yaml
+++ b/.github/workflows/deploy_frontend_dev.yaml
@@ -42,4 +42,4 @@ jobs:
           aws-region: us-east-2
 
       - name: Deploy to S3
-        run: aws s3 sync out/ s3://${{ env.BUCKET_NAME }} --delete
+        run: aws s3 sync out/ s3://lkpc-hosting-dev --delete
