--- a/.github/workflows/deploy_frontend_dev.yaml
+++ b/.github/workflows/deploy_frontend_dev.yaml
@@ -39,4 +39,6 @@ jobs:
           aws-region: us-east-2
 
       - name: Deploy to S3
-        run: aws s3 sync out/ s3://lkpc-hosting-dev --delete
+        run: |
+          aws s3 sync out/ s3://lkpc-hosting-dev --delete
+          aws cloudfront create-invalidation --distribution-id EYUKGCAC20DAQ --paths "/*"
