--- a/.github/workflows/deploy_frontend_dev.yaml
+++ b/.github/workflows/deploy_frontend_dev.yaml
@@ -41,4 +41,4 @@ jobs:
       - name: Deploy to S3
         run: |
           aws s3 sync out/ s3://lkpc-hosting-dev --delete
-          aws cloudfront create-invalidation --distribution-id EYUKGCAC20DAQ --paths "/*"
+          aws cloudfront create-invalidation --distribution-id "EYUKGCAC20DAQ" --paths "/*"
