--- a/.github/workflows/deploy_frontend_dev.yaml
+++ b/.github/workflows/deploy_frontend_dev.yaml
@@ -17,6 +17,19 @@ jobs:
       - name: Git clone the repository
         uses: actions/checkout@v4
 
+      - name: Cache dependencies
+        uses: actions/cache@v4
+        with:
+          # See here for caching with `yarn` https://github.com/actions/cache/blob/main/examples.md#node---yarn or you can leverage caching with actions/setup-node https://github.com/actions/setup-node
+          path: |
+            ~/.npm
+            ${{ github.workspace }}/.next/cache
+          # Generate a new cache whenever packages or source files change.
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**/*.js', '**/*.jsx', '**/*.ts', '**/*.tsx') }}
+          # If source files changed but packages didn't, rebuild from a prior cache.
+          restore-keys: |
+            ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
+
       # Set up Node.js environment
       - name: Set up Node.js
         uses: actions/setup-node@v3
@@ -40,5 +53,6 @@ jobs:
 
       - name: Deploy to S3
         run: |
+          aws cloudfront list-distributions --query 'DistributionList.Items[*].{ID:Id,DomainName:DomainName}' --output table
           aws s3 sync out/ s3://lkpc-hosting-dev --delete
           aws cloudfront create-invalidation --distribution-id "EYUKGCAC20DAQ" --paths "/*"
