--- a/.github/workflows/deploy_frontend_dev.yaml
+++ b/.github/workflows/deploy_frontend_dev.yaml
@@ -52,5 +52,6 @@ jobs:
 
       - name: Deploy to S3
         run: |
+          aws cloudfront list-distributions
           aws s3 sync out/ s3://lkpc-hosting-dev --delete
-          aws cloudfront create-invalidation --distribution-id "EYUKGCAC20DAQ" --paths "/*"
+          aws cloudfront create-invalidation --distribution-id EYUKGCAC20DAQ --paths "/*"
