--- a/.github/workflows/deploy_frontend_dev.yaml
+++ b/.github/workflows/deploy_frontend_dev.yaml
@@ -35,9 +35,13 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: arn:aws:iam::774305616028:role/GithubActionRole
+          session-name: "github-to-s3"
           aws-region: us-east-2
 
       - name: Deploy to S3
         run: |
+          aws sts assume-role \
+          --role-arn "arn:aws:iam::195275645861:role/GithubActionRole" \
+          --role-session-name "github-to-s3"
           aws s3 sync out/ s3://lkpc-hosting-dev --delete
-          aws cloudfront create-invalidation --distribution-id EYUKGCAC20DAQ --paths "/*"
+          aws cloudfront create-invalidation --distribution-id "EYUKGCAC20DAQ" --paths "/*"
