--- a/.github/workflows/deploy_frontend_dev.yaml
+++ b/.github/workflows/deploy_frontend_dev.yaml
@@ -34,11 +34,14 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::774305616028:role/GithubActionRole
+          role-to-assume: arn:aws:iam::195275645861:role/GithubActionRole
           session-name: "github-to-s3"
           aws-region: us-east-2
 
       - name: Deploy to S3
         run: |
           aws s3 sync out/ s3://lkpc-hosting-dev --delete
+
+      - name: Invalidate Cloudfront cache
+        run: |
           aws cloudfront create-invalidation --distribution-id "EYUKGCAC20DAQ" --paths "/*"
