--- a/.github/workflows/deploy_frontend_prod.yaml
+++ b/.github/workflows/deploy_frontend_prod.yaml
@@ -43,4 +43,4 @@ jobs:
 
       - name: Invalidate Cloudfront cache
         run: |
-          aws cloudfront create-invalidation --distribution-id "E16EK7ECFKG5QL" --paths "/*"
+          aws cloudfront create-invalidation --distribution-id "E3J6VLOLOX8SI3" --paths "/*"
