--- a/.github/workflows/deploy_frontend_dev.yaml
+++ b/.github/workflows/deploy_frontend_dev.yaml
@@ -32,30 +32,17 @@ jobs:
       - name: Build the app
         run: npm run build
 
-      # Set environment-specific variables
-      - name: Set environment-specific variables
-        run: |
-          if [ "${{ github.ref_name }}" == "main" ]; then
-            echo "BUCKET_NAME=lkpc-bucket-hosting-prod" >> $GITHUB_ENV
-            echo "ROLE_NAME=GithubActionRole-prod" >> $GITHUB_ENV
-            echo "AWS_REGION=us-east-2" >> $GITHUB_ENV  # Set region for prod
-          else
-            echo "BUCKET_NAME=lkpc-bucket-hosting-dev" >> $GITHUB_ENV
-            echo "ROLE_NAME=GithubActionRole-dev" >> $GITHUB_ENV
-            echo "AWS_REGION=us-east-2" >> $GITHUB_ENV  # Set region for dev
-          fi
-
       # Configure AWS credentials
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::${{secrets.PROFILE_ID}}:role/${{env.ROLE_NAME}}
+          role-to-assume: ${{secrets.AWS_GITHUB_ROLE_ARN}}
           aws-region: ${{env.AWS_REGION}}  # Pass AWS_REGION from environment variables
 
       # Deploy to S3
       - name: Deploy to S3
         run: |
-          aws s3 sync out/ s3://${{env.BUCKET_NAME}} --delete
+          aws s3 sync out/ s3://${{secrets.BUCKET_NAME}} --delete
 
       # Invalidate CloudFront cache
       - name: Invalidate CloudFront cache
