--- a/.github/workflows/deploy_frontend_dev.yaml
+++ b/.github/workflows/deploy_frontend_dev.yaml
@@ -36,7 +36,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{secrets.AWS_GITHUB_ROLE_ARN}}
+          role-to-assume: arn:aws:iam::195275645861:role/GithubActionRole-dev
           aws-region: us-east-2
 
       # Deploy to S3
