--- a/.github/workflows/deploy_frontend_dev.yaml
+++ b/.github/workflows/deploy_frontend_dev.yaml
@@ -32,6 +32,13 @@ jobs:
       - name: Build the app
         run: npm run build
 
+      - name: Print debug information
+        run: |
+          echo "AWS Region: ${{ secrets.AWS_REGION }}"
+          echo "GitHub Ref: ${{ github.ref }}"
+          echo "GitHub Environment: ${{ github.environment }}"
+          echo "Environment Variables: ${{ toJson(env) }}"
+
       # Configure AWS credentials
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
