--- a/.github/workflows/deploy_frontend_dev.yaml
+++ b/.github/workflows/deploy_frontend_dev.yaml
@@ -15,6 +15,13 @@ jobs:
     runs-on: ubuntu-latest
     environment: ${{ github.ref_name == 'main' && 'prod' || github.ref_name == 'dev' && 'dev' }}
     steps:
+      - name: Print debug information
+        run: |
+          echo "AWS Region: ${{ vars.AWS_REGION }}"
+          echo "GitHub Ref: ${{ github.ref }}"
+          echo "GitHub Environment: ${{ runner.environment }}"
+          echo "Environment Variables: ${{ toJson(vars) }}"
+    
       - name: Git clone the repository
         uses: actions/checkout@v4
 
