--- a/.github/workflows/deploy_frontend_dev.yaml
+++ b/.github/workflows/deploy_frontend_dev.yaml
@@ -44,7 +44,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::195275645861:role/GithubActionRole-dev
+          role-to-assume: arn:aws:iam::${{ secrets.PROFILE_ID }}:role/GithubActionRole-${{ vars.ENVIRONMENT }}
           aws-region: ${{ vars.AWS_REGION }}
 
       # Deploy to S3
